--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "drum-machine",
   "version": "0.0.0",
   "description": "Drum machine app",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "build": "webpack --mode=production",
     "build-dev": "webpack --mode=development",
@@ -14,6 +14,7 @@
   "author": "Craig Schwartz <craigschwartz525@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -30,7 +31,9 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
@@ -39,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^7.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
