--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
+    "@types/styled-components": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "babel-loader": "^8.2.2",
@@ -46,6 +47,7 @@
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
